# iot-uts-be

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  routes.rs
src/controllers/: device_controller.rs  home_controller.rs  lamp_controller.rs  mod.rs  other_controller.rs
src/structs/: device.rs  device_body.rs  device_status.rs  lamp.rs  lamp_status.rs  mod.rs  mqtt.rs  state.rs
src/views/: index.html  lamp.html  layout.html
src/views/device/: detail.html
src/views/lamps/: detail.html  index.html
