[package]
name = "iot-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1.66"
serde = { version = "1.0", features = ["derive"] }
tera = "1.5.0"
tide-tera = "0.2.2"
csrf = "0.4.1"
data-encoding = "2.3.3"
paho-mqtt = "0.11.1"
dotenv = "0.15"